--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "concurrently": "^8.2.0",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -22,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch src/Database/db.json --host 127.0.0.1 --port 3002",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
